Hopefully last update for step 2 of HW 2

--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -23,6 +23,7 @@
 	
     <!-- Header Section -->
     <!-- Introduce the Viewer to the subject of the webpage -->
+		<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
 		<h1> Kai Thunberg's Bio	</h1>
 		
 
