First update for Step 3

--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Kai Thunberg Bio Page</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 	<style>
 		.bioDiv {border: 5px outset rgb(0, 98, 255);
 		  background-color: lightgrey;    
