2nd Update to CSS Style Sheet

--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -23,9 +23,9 @@
 	
     <!-- Header Section -->
     <!-- Introduce the Viewer to the subject of the webpage -->
-		<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
-		<h1> Kai Thunberg's Bio	</h1>
 		
+		<h1> Kai Thunberg's Bio	</h1>
+		<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
 
     <!-- Navigation Section -->
     <!-- Provides for fast navigation throughtout the website -->
@@ -53,9 +53,9 @@
 		<div class="bioDiv">
 			<h2> Bio Categories</h2>
 				<u1>
-					<li>Brief Background</li>
-					<li>Academic Interests</li>
-					<li>Previous Education and Degrees</li>
+					<li><a href= "Brief Background">Brief Background</a></li>
+					<li><a href= "Academic Interests">Academic Interests</a></li>
+					<li><a href= "Previous Education and Degrees">Previous Education and Degrees</a> </li>
 					<li>Scholastic Achievements</li>
 					<li>Hobbies</li>
 				</u1>
