--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -61,8 +61,12 @@
 					<li>Hobbies</li>
 				</u1>
 		</div> 
-		<!--Here We will divide the content and list the subject of the Bio Page-->
-			<p>
+
+	<!--Here We will divide the content and list the subject of the Bio Page-->
+			
+		<div class="primary-content">
+    <!-- Essential content for mobile viewport -->
+		<p>
 				<h2><u>Brief Background</u></h2>
 				
 					Hi everyone!  My name is Kai and I am an "Airforce Brat" who moved to Colorado in the Winter of 2011 from Southern California. Colorado is officially
@@ -108,6 +112,14 @@
 				and enjoy traveling and experiencing new cultures. When I am not in front of a computer screen I also like to cook 
 				or garden to relax.
 			</p>
+			</div>
+
+	<!-- Additional content or less essential content -->
+			<div class=""secondary-content">
+			<p> 
+				<h3>Please feel free to reach out to me with any questions or inquiries. Thank you.</h3>
+			</p>
+			</div>
 		</main>
 
 	<footer>
