--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kai Thunberg Bio Page</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
 	<style>
 		.bioDiv {border: 5px outset rgb(0, 98, 255);
 		  background-color: lightgrey;    
