--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
 	<style>
 		.bioDiv {border: 5px outset rgb(0, 98, 255);
-		  background-color: lightgrey;    
+		  background-color: #b7b7b7;    
 		  text-align: center;}
 	</style>
 </head>
@@ -32,16 +32,7 @@
     <!-- Navigation Section -->
     <!-- Provides for fast navigation throughtout the website -->
     
-    	<nav>
-        	<ul>
-           	 <li><a href="Homepge.html">Homepage</a></li>
-			 <li><a href="Bio.asp">Bio</a></li>
-             <li><a href="Scholastic Achievements.asp">Scholastic Achievments</a></li>
-           	 <li><a href="Career Goals.asp">Career Goals</a></li>
-             <li><a href="Interests.asp">Interests</a></li>
-             <li><a href="Contact.html">Contact</a></li>
-       		 </ul>
-   		</nav> 
+
 	</header>   
     <!-- Main Content Section -->
     <!-- Nest a div element with an id attribute and appropriate value within your main element -->
