"working on bio page"

--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -28,7 +28,7 @@
 		<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
 
     <!-- Navigation Section -->
-    <!-- Provides for fast navigation throughtout the website -->
+    <!-- Provides for fast navigation throughout the website -->
     
 
 	</header>   
@@ -47,8 +47,8 @@
 					<li><a href= "Brief Background">Brief Background</a></li>
 					<li><a href= "Academic Interests">Academic Interests</a></li>
 					<li><a href= "Previous Education and Degrees">Previous Education and Degrees</a> </li>
-					<li>Scholastic Achievements</li>
-					<li>Hobbies</li>
+					<li><a href= "Scholastic Achievements">Scholastic Achievements</a></li>
+					<li><a href= "Hobbies">Hobbies</a></li>
 				</u1>
 		</div> 
 
