--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
     <style>
         /* CSS Reset */
-        body, h1, h2, h3, p, u1, li, figure, figcaption {
+        body, h1, h2, h3, p, ul, li, figure, figcaption {
             margin: 0;
             padding: 0;
             border: 0;
@@ -25,8 +25,6 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
         }
-
-        /* Add other reset styles as needed */
 
         /* Additional styles for figure and figcaption */
         figure {
@@ -45,24 +43,26 @@
     <header>
         <!-- Header Section -->
         <!-- Introduce the Viewer to the subject of the webpage -->
-        <h1> Kai Thunberg's Bio </h1>
+        <h1>Kai Thunberg's Bio</h1>
         <figure>
             <img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
             <figcaption>Exploring life and tech, one step at a time.</figcaption>
         </figure>
-        <!-- Navigation Section -->
-        <!-- Provides for fast navigation throughout the website -->
     </header>
+
+    <!-- Navigation Section -->
+    <!-- Provides for fast navigation throughout the website -->
 
     <!-- Main Content Section -->
     <!-- Nest a section element with an id attribute and appropriate value within your main element -->
     <main>
         <p>
+            <!-- Detailed content about career goals and aspirations -->
             Thank you for taking the time to visit my personal Biography. I hope you are able to learn a little more about me. For further inquiries please feel free to reach out to me by clicking on the contact information at the bottom of the page.
         </p>
 
         <section id="bioCategories">
-            <h2> Bio Categories</h2>
+            <h2>Bio Categories</h2>
             <ul>
                 <li><a href="Brief Background">Brief Background</a></li>
                 <li><a href="Academic Interests">Academic Interests</a></li>
@@ -127,6 +127,7 @@
         </aside>
     </main>
 
+    <!-- Footer Section -->
     <footer>
         <center>
             <p>©2023 MyWebsite. All rights reserved. <br> Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
