--- a/Portfolio/Bio.html
+++ b/Portfolio/Bio.html
@@ -9,10 +9,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="description" content="Give a brief summary and background. Make myself more relatable."
     <title>Kai Thunberg Bio Page</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-HzLMp9WdIc/3DWOo6tgGoHP0wZ9jk9sU8rMeeE+3i9jddPbN0jpZ9emt/bvXZ1ftRnt51ll8Ty8s9ynx1n+EmDw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* CSS Reset */
         body, h1, h2, h3, p, ul, li, figure, figcaption {
@@ -132,6 +134,11 @@
         <center>
             <p>©2023 MyWebsite. All rights reserved. <br> Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
         </center>
+        <!-- Social Media Icons -->
+    <div class="social-icons">
+        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <!-- Add more social media icons as needed -->
+    </div>
     </footer>
 </body>
 
